[443097]Ignore undefined HTML attributes, elements validation with extension point
Signed-off-by: Konstantin Marmalyukov <kmarmaliykov@exadel.com>

--- a/bundles/org.eclipse.wst.html.core/plugin.properties
+++ b/bundles/org.eclipse.wst.html.core/plugin.properties
@@ -15,3 +15,5 @@ HTML_Content_Type_Extension_Element.name=HTML
 _taskMarker.name=HTML Task
 _validationMarker.name=HTML Problem
 HTML_Syntax_Validator.name=HTML Syntax Validator
+CustomHtmlTagValidator.name=External Validator For Custom HTML Tags
+CustomHtmlAttributeValidator.name=External Validator For Custom HTML Attributes
