[443097]Ignore undefined HTML attributes, elements validation with extension point
Signed-off-by: Konstantin Marmalyukov <kmarmaliykov@exadel.com>

--- a/tests/org.eclipse.wst.html.ui.tests/plugin.xml
+++ b/tests/org.eclipse.wst.html.ui.tests/plugin.xml
@@ -11,5 +11,7 @@
 			id="org.eclipse.wst.html.ui.tests.viewer.ViewerTestHTML">
 		</view>
 	</extension>
-
+	<extension point="org.eclipse.wst.html.core.customTagValidator">
+		<validator class="org.eclipse.wst.html.ui.tests.validation.CustomExtendedValidator"></validator>
+	</extension>
 </plugin>
